# modified_bbs_forpoc

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  pok_sig.rs  pok_vc.rs  tempCodeRunnerFile.rs
tests/: bbs.rs
