[package]
name = "modified_bbs_for_PoC"
version = "0.1.1"
edition = "2021"
authors = ["kskhasegawa"]
description = "The BBS+ signature scheme"
readme = "README.md"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]
[dependencies.arrayref]
version = "0.3"

[dependencies.blake2]
version = "0.8"

[dependencies.failure]
version = "0.1"

[dependencies.ff-zeroize]
version = "0.6"

[dependencies.hex]
version = "0.4"

[dependencies.hkdf]
version = "0.8"

[dependencies.pairing-plus]
version = "0.19"

[dependencies.rand]
version = "0.7"

[dependencies.rayon]
version = "1.3"
optional = true

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]

[dependencies.serde-wasm-bindgen]
version = "0.1"
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.zeroize]
version = "1.1"

[dev-dependencies]

[features]
default = ["rayon"]
wasm = ["serde-wasm-bindgen", "wasm-bindgen"]
[badges.maintenance]
status = "active"

